@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Serialization library.
 Release 0.1.1 (pending)
 ==========================
 
+- Fix locally defined symbol warnings with -DPOTHOS_ARCHIVE_SOURCE
 - Added algorithm include to transform_width.hpp for std::min usage
 
 Release 0.1.0 (2014-12-21)
